# alarm-point-lib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  conanfile.py
implementations/rbd/include/: Analog.hpp  RbdAnalog.hpp  RbdPlant.hpp  RbdPoint.hpp  RbdPointFactory.hpp
implementations/rbd/src/: RbdPlant.cpp  RbdPointFactory.cpp  main.cpp
include/: AlarmPoint.hpp  Analog.hpp  AnalogPoint.hpp  ConfigReader.hpp  ConfigValidator.hpp  IPlant.hpp  IRule.hpp  IRuleSet.hpp  ModeAnalog.hpp  ModeRuleSet.hpp  MultiState.hpp  RuleBuilder.hpp  RuleSet.hpp  Rules.hpp  Switch.hpp  Types.hpp
include/apl/: AlarmPoint.hpp  AlarmPointRepo.hpp  AlarmState.hpp  BoundTypes.hpp  ConfigData.hpp  ConfigReader.hpp  ConfigValidator.hpp  Handler.hpp  IAlarmable.hpp  IPlant.hpp  IPointFactory.hpp  MultiInt.hpp  MultiState.hpp  PointConfigData.hpp  PointFactory.hpp  Points.hpp  RuleBuilder.hpp  RuleSet.hpp  Rules.hpp  Switch.hpp  Tracker.hpp  Types.hpp  Utils.hpp
schemas/: config.schema.json  point.schema.json  test_bad_config.json  test_config.json  test_point.json  validate.py
src/: AlarmPoint.cpp  AlarmPointRepo.cpp  Analog.cpp  AnalogPoint.cpp  BoundTypes.cpp  ConfigData.cpp  ConfigReader.cpp  IPointFactory.cpp  ModeAnalog.cpp  ModeRuleSet.cpp  PointConfigData.cpp  PointFactory.cpp  RuleSet.cpp  Rules.cpp  Switch.cpp  Tracker.cpp  main.cpp  schema.hpp.in
test/: CMakeLists.txt
test/include/: TestAnalogPoint.hpp  TestBooleanPoint.hpp
test/src/: analog_mode_test.cpp  build_points_test.cpp  dynamic_bounds.cpp  main.cpp  multistate_enum_test.cpp  multistate_string_test.cpp  read_config_test.cpp  static_bounds.cpp  switch_test.cpp  tracker_test.cpp
